--- a/src/components/pages/ItemDetailContainer/ItemDetail.module.css
+++ b/src/components/pages/ItemDetailContainer/ItemDetail.module.css
@@ -1,6 +1,6 @@
-.cards{
-    padding-top: 90px;
+.card{
     width: 100%;
+    padding-top: 90px;
     display: flex;
     align-items: center;
     gap: 50px;
