--- a/src/components/layout/navbar/Navbar.module.css
+++ b/src/components/layout/navbar/Navbar.module.css
@@ -1,10 +1,11 @@
 .navbar {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   height: 170px;
-  background-color: #cad77d;
+  background-color: #5f8e409c;
 }
 .navbar ul {
   list-style: none;
@@ -12,8 +13,8 @@
   gap: 20px;
 }
 .navbar ul a {
-  background-color: #2f5022;
-  border-radius: 20px;
+  background-color: #525151;
+  border-radius: 9px;
   color: white;
   display: block;
   text-decoration: none;
